# drunk-cherry

./: .gitignore  README.md  notes.txt  pyproject.toml  requirements.txt
app/: Dockerfile  app.py  pyproject.toml
app/model/: trail_cnn_model.keras
gpx_examples/: Capitan_Jacks_Black.gpx  Sweetwater_Blue.gpx  activity_19643724465.gpx  activity_19653371463.gpx
src/: bad_cnn.py  overview.ipynb  trail_helpers.py  utils.py
src/bayesian/: bayesian_model.R
src/cnn/: model.py  train.py  utils.py
src/mlp/: model.py  train.py  utils.py
src/models/: trail_cnn_model.keras
src/models/bayesian/: evaluation_metrics.csv  mcmc_config.csv  per_class_metrics_test.csv  per_class_metrics_train.csv  posterior_mean_weights.csv  posterior_sd_weights.csv
src/scripts/: image_gen.py
