[project]
authors = [
    {name = "Michael Mehall", email = "mehall.m@northeastern.edu"},
    {name = "Paolo Lanaro", email = "lanaro.p@northeastern.edu"},
]
name = "drunk-cherry"
version = "0.1.0"
description = "DS4420 Final Project - Michael Mehall & Paolo Lanaro"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "scikit-learn",
    "keras",
    "tensorflow",
    # probably switching to pytorch soon?
    # "pytorch"
]
