[project]
name = "drunk-cherry-app"
version = "0.1.0"
description = "Streamlit app for bike trail difficulty prediction from GPX files"
requires-python = ">=3.12, <3.14"
dependencies = [
    "gpxpy>=1.6.2",
    "keras>=3.13.2",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "pillow>=11.2.1",
    "streamlit>=1.45.1",
    "tensorflow>=2.21.0",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
]
